# video-compressor

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  clean_build.sh  main.py  main.py.bak.20250706_192220  pyproject.toml  requirements.txt  setup.py
res/: __init__.py
src/: download.py.bak.20250627_034042  download.py.bak.20250706_191604  globals.py  thread.py
src/videocompressor/: main.py
