[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videocompressor"
version = "1.0.0"
description = "Compress videos to a target size using FFmpeg"
authors = [
  { name="4ndr0666", email="4ndr0@pm.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6.1",
  "requests>=2.31.0",
  "psutil>=5.9.8"
]

[project.urls]
Homepage = "https://github.com/4ndr0666/video-compressor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
